enhancement of key tables except categories

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/KeyTable/KeyTable.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/KeyTable/KeyTable.cshtml
@@ -44,25 +44,15 @@
         <div class="col-xs-12 col-md-8" id="project-layout-content">
             <div class="table-of-keys-content">
                 <div class="container-fluid table-of-keys-container">
-                    <div class="row table-of-keys">
+                    <div class="table-of-keys">
                         <div class="table-of-keys-title">Table of keys title</div>
-                        <div class="col-xs-12 col-md-9 selectable-list-div"></div>
-                        <div class="hidden-xs hidden-sm col-md-3 crud-buttons-div">
-                            <div class="btn-group-vertical">
-                                <button type="button" class="btn btn-default create-key-table-entry">
-                                    <i class="fa fa-plus-square-o" aria-hidden="true"></i>
-                                    <span class="create-key-table-entry-description">Create table of keys entry</span>
-                                </button>
-                                <button type="button" class="btn btn-default rename-key-table-entry">
-                                    <i class="fa fa-pencil" aria-hidden="true"></i>
-                                    <span class="rename-key-table-entry-description">Rename table of keys entry</span>
-                                </button>
-                                <button type="button" class="btn btn-default delete-key-table-entry">
-                                    <i class="fa fa-trash-o" aria-hidden="true"></i>
-                                    <span class="delete-key-table-entry-description">Delete table of keys entry</span>
-                                </button>
-                            </div>
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-default create-key-table-entry">
+                                <i class="fa fa-plus-square-o" aria-hidden="true"></i>
+                                <span class="create-key-table-entry-description">Create table of keys entry</span>
+                            </button>
                         </div>
+                        <div class="key-table-div"></div>
                     </div>
                 </div>
             </div>
@@ -91,7 +81,7 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">@Localizer.Translate("Close", "KeyTable", LocTranslationSource.File)</button>
+                            <button type="button" class="btn btn-default info-dialog-close-button" data-dismiss="modal">@Localizer.Translate("Close", "KeyTable", LocTranslationSource.File)</button>
                             <button type="button" class="btn btn-default info-dialog-ok-button" data-dismiss="modal">@Localizer.Translate("Ok", "KeyTable", LocTranslationSource.File)</button>
                         </div>
                     </div>
@@ -127,7 +117,7 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">@Localizer.Translate("Close", "KeyTable", LocTranslationSource.File)</button>
+                            <button type="button" class="btn btn-default info-dialog-close-button" data-dismiss="modal">@Localizer.Translate("Close", "KeyTable", LocTranslationSource.File)</button>
                             <button type="button" class="btn btn-default info-dialog-ok-button" data-dismiss="modal">@Localizer.Translate("Ok", "KeyTable", LocTranslationSource.File)</button>
                         </div>
                     </div>
@@ -147,7 +137,7 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">@Localizer.Translate("Close", "KeyTable", LocTranslationSource.File)</button>
+                            <button type="button" class="btn btn-default info-dialog-close-button" data-dismiss="modal">@Localizer.Translate("Close", "KeyTable", LocTranslationSource.File)</button>
                             <button type="button" class="btn btn-default info-dialog-ok-button" data-dismiss="modal">@Localizer.Translate("Ok", "KeyTable", LocTranslationSource.File)</button>
                         </div>
                     </div>
@@ -165,7 +155,7 @@
                             <p class="info-dialog-message"></p>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">@Localizer.Translate("Close", "KeyTable", LocTranslationSource.File)</button>
+                            <button type="button" class="btn btn-default info-dialog-close-button" data-dismiss="modal">@Localizer.Translate("Close", "KeyTable", LocTranslationSource.File)</button>
                         </div>
                     </div>
                 </div>
@@ -182,7 +172,7 @@
                             <p class="confirmation-dialog-message"></p>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">@Localizer.Translate("Close", "KeyTable", LocTranslationSource.File)</button>
+                            <button type="button" class="btn btn-default info-dialog-close-button" data-dismiss="modal">@Localizer.Translate("Close", "KeyTable", LocTranslationSource.File)</button>
                             <button type="button" class="btn btn-default confirmation-ok-button" data-dismiss="modal">@Localizer.Translate("Ok", "KeyTable", LocTranslationSource.File)</button>
                         </div>
                     </div>
@@ -212,7 +202,7 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">@Localizer.Translate("Close", "KeyTable", LocTranslationSource.File)</button>
+                            <button type="button" class="btn btn-default info-dialog-close-button" data-dismiss="modal">@Localizer.Translate("Close", "KeyTable", LocTranslationSource.File)</button>
                             <button type="button" class="btn btn-default info-dialog-ok-button" data-dismiss="modal">@Localizer.Translate("Ok", "KeyTable", LocTranslationSource.File)</button>
                         </div>
                     </div>
