--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1981,3 +1981,15 @@ table {
 .adjust_select_height {
     height: 34px;
 }
+
+.create-key-table-entry {
+    margin-bottom: 20px;
+}
+
+.key-table-button-cell {
+    text-align: right;
+}
+
+.separate-button {
+    margin-left: 10px;
+}
