--- a/UJCSystem/ITJakub.Web.Hub/Areas/Dictionaries/Views/Dictionaries/Listing.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Dictionaries/Views/Dictionaries/Listing.cshtml
@@ -1,4 +1,5 @@
-﻿@using Scalesoft.Localization.AspNetCore
+﻿@using ITJakub.Web.Hub.Constants
+@using Scalesoft.Localization.AspNetCore
 @inject ILocalizationService Localizer
 
 @section styles{
@@ -14,7 +15,7 @@
 
 <script type="text/javascript">
     $(document).ready(function() {
-        initDictionaryViewer("@Context.Request.Query["categories"]", "@Context.Request.Query["books"]", "@Context.Request.Query["page"]");
+        initDictionaryViewer("@Context.Request.Query["categories"]", "@Context.Request.Query["books"]", "@Context.Request.Query["page"]", @PageSizes.Headwords);
     });
 </script>
 
