Don't translate ResponsibleTypeEnum and update localization

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/KeyTable/KeyTable.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/KeyTable/KeyTable.cshtml
@@ -107,9 +107,9 @@
                                     <p class="secondary-input-dialog-message"></p>
                                         <select class="form-control responsible-type-selection">
                                             @{
-                                                <option value="@((int) ResponsibleTypeEnumContract.Unknown)">@Localizer.Translate("Unknown", "KeyTable", LocTranslationSource.File)</option>
-                                                <option value="@((int) ResponsibleTypeEnumContract.Editor)">@Localizer.Translate("Editor", "KeyTable", LocTranslationSource.File)</option>
-                                                <option value="@((int) ResponsibleTypeEnumContract.Kolace)">@Localizer.Translate("Collation", "KeyTable", LocTranslationSource.File)</option>
+                                                <option value="@((int) ResponsibleTypeEnumContract.Unknown)">@ResponsibleTypeEnumContract.Unknown</option>
+                                                <option value="@((int) ResponsibleTypeEnumContract.Editor)">@ResponsibleTypeEnumContract.Editor</option>
+                                                <option value="@((int) ResponsibleTypeEnumContract.Kolace)">@ResponsibleTypeEnumContract.Kolace</option>
                                             }
                                         </select>
                                     </div>
