--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/KeyTable/KeyTable.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/KeyTable/KeyTable.cshtml
@@ -11,6 +11,7 @@
 }
 @section styles {
     <link asp-append-version="true" rel="stylesheet" href="~/Areas/Admin/css/ridics.project.css" />
+    <link asp-append-version="true" rel="stylesheet" href="~/Areas/Admin/css/ridics.keytable.css" />
 }
 @section scripts {
     <script asp-append-version="true" src="~/Areas/Admin/js/editors-common-base/ridics.project.editors.bundle.js"></script>
