Simple "terms" editor on KeyTable page - only note

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/KeyTable/KeyTable.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/KeyTable/KeyTable.cshtml
@@ -17,7 +17,6 @@
 <div class="content-container keytable-container">
     <div class="row display-flex">
         <div class="col-xs-12 col-md-2 left-menu left-menu" id="left-menu">
-            <div class="project-title">Název díla</div>
             <div class="list-group list-group-root" id="project-navigation">
                     <a href="#" class="list-group-item key-table-editor-selection active" data-editor-type="@{@((int)KeyTableEditorType.Category)}">Category</a>
                     <a href="#" class="list-group-item key-table-editor-selection" data-editor-type="@{@((int)KeyTableEditorType.Genre)}">Genre</a>
@@ -27,6 +26,7 @@
                     <a href="#" class="list-group-item key-table-editor-selection" data-editor-type="@{@((int)KeyTableEditorType.LiteraryOriginal)}">Literary Original</a>
                     <a href="#" class="list-group-item key-table-editor-selection" data-editor-type="@{@((int)KeyTableEditorType.OriginalAuthor)}">Original Author</a>
                     <a href="#" class="list-group-item key-table-editor-selection" data-editor-type="@{@((int)KeyTableEditorType.Keyword)}">Keyword</a>
+                    <a href="#" class="list-group-item key-table-editor-selection" data-editor-type="@{@((int)KeyTableEditorType.Term)}">Term</a>
             </div>
         </div>
 
