--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Project.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Project.cshtml
@@ -64,7 +64,7 @@
                     <a href="#" class="list-group-item" id="project-work-chapter-editor" data-panel-type="@Html.Raw((int) ProjectModuleTabType.WorkChapters)">@Localizer.Translate("Chapters", "Admin")</a>
                     <a href="#" class="list-group-item" id="project-navigation-text">@Localizer.Translate("Texts", "Admin")</a>
                     <a href="#" class="list-group-item" id="project-navigation-image">@Localizer.Translate("ImageScan", "Admin")</a>
-                    <a href="#" class="list-group-item" id="project-navigation-terms">@Localizer.Translate("Terms", "Admin")</a>
+                    <a href="#" class="list-group-item" id="project-navigation-terms">@Localizer.Translate("Term", "Admin")</a>
                     <a href="#" class="list-group-item" id="project-work-note" data-panel-type="@Html.Raw((int) ProjectModuleTabType.WorkNote)">@Localizer.Translate("EditionNote", "Admin")</a>
                 </div>
                 <span class="list-group-item parent-item">@Localizer.Translate("InfoAboutWork", "Admin")</span>
