--- a/UJCSystem/ITJakub.Web.Hub/Views/Shared/Menu/_PortalMenuCommunity.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Shared/Menu/_PortalMenuCommunity.cshtml
@@ -153,7 +153,7 @@
             </ul>
         </li>*@
         <li>
-            <a href='@ForumOption.Value.Url'>
+            <a href='@ForumOption.Value.ForumBaseUrl'>
                 <span>@Localizer.Translate("Forum", "layout", LocTranslationSource.File)</span>
             </a>
         </li>
